# miao-fruit-shop

./: .gitignore  README.md  package.json  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09d090ef35ea_create_orders_and_order_items.py  16c86ea7cbda_create_products_and_product_specs.py  6f74f5a8f3db_add_line_fields_to_orders.py  872ffc62f4fd_add_spec_id_to_product_images.py  c0a601baebed_add_product_images.py  cc596ddea322_create_admin_users.py
backend/app/: cli.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/core/: config.py  database.py  (+3 more)
backend/tests/: conftest.py  test_admin_auth_api.py  test_admin_images_api.py  test_admin_order_service.py  test_admin_orders_api.py  test_admin_products_api.py  test_admin_repo.py  test_auth_service.py  test_cli.py  test_config.py  test_cors.py  test_db_session.py  test_deps.py  test_errors.py  test_gcs_service.py  test_health.py  test_image_repo.py  test_image_service.py  test_line_config.py  test_line_richmenu.py  test_line_service.py  test_line_webhook_api.py  test_line_webhook_service.py  test_order_amounts.py  test_order_models.py  test_order_repo.py  test_order_service.py  test_orders_api.py  test_product_images_public.py  test_product_repo.py  test_product_service.py  test_products_api.py  test_schemas_admin.py  test_schemas_admin_order.py  test_schemas_image.py  test_schemas_order.py  test_schemas_product.py  test_security.py  test_seed_product_cli.py  test_spec_repo.py  (+1 more)
(+90 files in other folders)
